half responsive complete for mobile

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <button class="hero_btn">Join Now</button>
                 </div>
                 <div class="card_img">
-                    <img src="img/run.jpg" alt="">
+                    <!-- <img src="img/run.jpg" alt=""> -->
                 </div>
             </div>
 
